--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -21,6 +21,12 @@ html, body, p {
     padding-bottom: 40px;
 }
 
+@media (max-width: 979px) {
+    .padfix {
+        padding-top: 0px;
+    }
+}
+
 .footer {
     position: relative;
     margin-top: -40px;
